bcrypt hash installed, hook for create and update user added

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/trfina/tech-blog#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
